--- a/calculator.yaml
+++ b/calculator.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: calculator
-        image: leszko/calculator:{{VERSION}}
+        image: agileqa/calculator:{{VERSION}}
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
