--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation("io.cucumber:cucumber-java:4.2.6")
 	testImplementation("io.cucumber:cucumber-junit:4.2.6")
+
+	compile "org.springframework.data:spring-data-redis:1.8.0.RELEASE"
+	compile "redis.clients:jedis:2.9.0"
 }
 
 jacocoTestCoverageVerification {
