--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
     calculator:
-        image: calculator:latest
+        image: agileqa/calculator:latest
         ports:
             - 8080
     redis:
