--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-	id 'org.springframework.boot' version '2.1.3.RELEASE'
+	id 'org.springframework.boot' version '2.3.2.RELEASE'
+	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
 }
 
@@ -18,6 +19,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+				exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
      
      testImplementation("io.cucumber:cucumber-java:4.2.6")
      testImplementation("io.cucumber:cucumber-junit:4.2.6")
@@ -42,6 +44,12 @@ task acceptanceTest(type: Test) {
      systemProperties System.getProperties()
 }
 
+task smokeTest(type: Test) {
+	include '**/acceptance/**'
+	systemProperties System.getProperties()
+}
+
 test {
      exclude '**/acceptance/**'
+	 exclude '**/smoke/**'
 }
